# fmp-mcp

./: README.md  fmp_client.py  polygon_client.py  pyproject.toml  schwab_client.py  server.py  treasury_client.py
docs/: fmp_docs_parity_checklist.md
scripts/: polygon_stress_test.py
tests/: conftest.py  test_auctions.py  test_live.py  test_meta_tools.py  test_new_tools.py  test_polygon_tools.py  test_tools.py  test_workflows.py
tools/: _endpoint_registry.py  _helpers.py  assets.py  auctions.py  economy.py  edgar.py  edgar_client.py  financials.py  macro.py  market.py  meta.py  news.py  options.py  overview.py  ownership.py  transcripts.py  valuation.py  workflows.py
