[project]
name = "pantainos-fmp"
version = "0.1.0"
description = "FMP financial data MCP server for Pantainos"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "fmp-data==2.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "toon-llm>=1.0.0b6",
    "edgartools>=4.0.1",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "python-dotenv", "respx"]

[tool.hatch.build.targets.wheel]
packages = ["tools"]
include = ["server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: live integration tests against real APIs",
    "live_smoke: fast representative subset of live tests",
    "live_full: full live e2e coverage including all tools and branch cases",
]
